--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <!-- <link rel="stylesheet" href="font-awesome.min.css"> -->
   </head>
   <body>
@@ -115,6 +117,7 @@
           </div>
       </div>
     </div>
+
     </section>
 
     <section class="section">
@@ -263,16 +266,42 @@
         <img class="modal__image-hidden" data-img="Hyatt" src="img/hyatt/WorldOfHyattLoyaltyProgram.png"/>
         <img class="modal__image-hidden" data-img="ShipBob" src="img/shipbob/shipbob-logo.jpeg"/>
         <img class="modal__image-hidden" data-img="Levinson" src="img/levinson/levionson-homepage.png"/>
-        <img class="modal__image-hidden" data-img="Geneca" src="img/geneca/geneca-home.png"/>
+        <img class="modal__image-hidden" data-img="Geneca" src="img/geneca/geneca-custom-software.png"/>
         <img class="modal__image-hidden" data-img="CMT" src="img/cmt/cmt-home.png"/>
       </figure>
+      <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/shipbob/shipbob-logo.jpeg" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="img/shipbob/shipbob-home.jpg" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="img/hyatt/hyatt-home.png" class="d-block w-100">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div> -->
       <div class="title" data-js="modal-title">
       </div>
       <div class="tag" data-js="modal-tag">
       </div>
       <p class="description" data-js="modal-description"></p>
 
-      <div class="row">
+      <div class="row modal__row--bottom">
         <a class="btn" data-js="modal-link">
           Visit Site
         </a>
