--- a/index.html
+++ b/index.html
@@ -18,6 +18,60 @@
     <!-- <link rel="stylesheet" href="font-awesome.min.css"> -->
   </head>
   <body>
+
+  <!-- The Modal -->
+  <div data-js="modal" class="modal-wrap">
+      <!-- Modal content -->
+      <div class="modal-content">
+        <figure>
+          <img class="modal__image-hidden" data-img="Grainger" src="img/grainger/grainger-seach.png"/>
+          <img class="modal__image-hidden" data-img="Hyatt" src="img/hyatt/WorldOfHyattLoyaltyProgram.png"/>
+          <img class="modal__image-hidden" data-img="ShipBob" src="img/shipbob/shipbob-logo.jpeg"/>
+          <img class="modal__image-hidden" data-img="Levinson" src="img/levinson/levionson-homepage.png"/>
+          <img class="modal__image-hidden" data-img="Geneca" src="img/geneca/geneca-custom-software.png"/>
+          <img class="modal__image-hidden" data-img="CMT" src="img/cmt/cmt-home.png"/>
+        </figure>
+        <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="img/shipbob/shipbob-logo.jpeg" class="d-block w-100">
+            </div>
+            <div class="carousel-item">
+              <img src="img/shipbob/shipbob-home.jpg" class="d-block w-100">
+            </div>
+            <div class="carousel-item">
+              <img src="img/hyatt/hyatt-home.png" class="d-block w-100">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div> -->
+        <div class="title" data-js="modal-title">
+        </div>
+        <div class="tag" data-js="modal-tag">
+        </div>
+        <p class="description" data-js="modal-description"></p>
+  
+        <div class="row modal__row--bottom">
+          <a class="btn" data-js="modal-link">
+            Visit Site
+          </a>
+          <i id="close" class="fa fa-times close"></i>
+        </div>
+      </div>
+    </div>
+
     <div id="Home" class="home-body">
       <figure id="pt" class="canvas">
         <div id="particles-js"></div>
@@ -256,59 +310,6 @@
         </div>
       </div>
     </section>
-
-  <!-- The Modal -->
-  <div data-js="modal" class="modal">
-    <!-- Modal content -->
-    <div class="modal-content">
-      <figure>
-        <img class="modal__image-hidden" data-img="Grainger" src="img/grainger/grainger-seach.png"/>
-        <img class="modal__image-hidden" data-img="Hyatt" src="img/hyatt/WorldOfHyattLoyaltyProgram.png"/>
-        <img class="modal__image-hidden" data-img="ShipBob" src="img/shipbob/shipbob-logo.jpeg"/>
-        <img class="modal__image-hidden" data-img="Levinson" src="img/levinson/levionson-homepage.png"/>
-        <img class="modal__image-hidden" data-img="Geneca" src="img/geneca/geneca-custom-software.png"/>
-        <img class="modal__image-hidden" data-img="CMT" src="img/cmt/cmt-home.png"/>
-      </figure>
-      <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="img/shipbob/shipbob-logo.jpeg" class="d-block w-100">
-          </div>
-          <div class="carousel-item">
-            <img src="img/shipbob/shipbob-home.jpg" class="d-block w-100">
-          </div>
-          <div class="carousel-item">
-            <img src="img/hyatt/hyatt-home.png" class="d-block w-100">
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div> -->
-      <div class="title" data-js="modal-title">
-      </div>
-      <div class="tag" data-js="modal-tag">
-      </div>
-      <p class="description" data-js="modal-description"></p>
-
-      <div class="row modal__row--bottom">
-        <a class="btn" data-js="modal-link">
-          Visit Site
-        </a>
-        <i id="close" class="fa fa-times close"></i>
-      </div>
-    </div>
-  </div>
   </body>
 
   <!-- Footer -->
